[gd_scene load_steps=6 format=3 uid="uid://cmhqty6g1sgls"]

[ext_resource type="Script" path="res://src/autoload/scene_changer/scene_changer.gd" id="1_6yofi"]
[ext_resource type="PackedScene" uid="uid://df63fi5u7xpjt" path="res://src/lobby/lobby.tscn" id="2_nsjnt"]
[ext_resource type="PackedScene" uid="uid://cmta6hi75dnwf" path="res://src/config_menu/config_menu.tscn" id="2_v6cn0"]
[ext_resource type="PackedScene" uid="uid://civfmojof07gs" path="res://src/main_menu/main_menu.tscn" id="3_667vk"]
[ext_resource type="PackedScene" uid="uid://crqc4k74es8j6" path="res://src/lobby_browser/lobby_browser.tscn" id="3_gctsf"]

[node name="SceneChanger" type="Node"]
script = ExtResource("1_6yofi")
config_menu = ExtResource("2_v6cn0")
lobby = ExtResource("2_nsjnt")
lobby_browser = ExtResource("3_gctsf")
main_menu = ExtResource("3_667vk")

[node name="DisconnectedDialog" type="AcceptDialog" parent="."]
size = Vector2i(216, 100)
borderless = true
dialog_text = "Disconnected from server."

[node name="FallbackTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0
one_shot = true

[node name="SceneSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/level/main_floor/main_floor.tscn", "res://src/lobby/lobby.tscn")
spawn_path = NodePath(".")
spawn_limit = 1

[connection signal="timeout" from="FallbackTimer" to="." method="_main_menu_fallback"]
[connection signal="child_entered_tree" from="SceneSpawner" to="FallbackTimer" method="stop" unbinds=1]
[connection signal="child_exiting_tree" from="SceneSpawner" to="FallbackTimer" method="start" unbinds=1]
